Add an ability to use revokation list automatically
Revokation lists works only in OpenVPN 2.4+, so add it to install line
and initialize revokation list.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,3 +23,5 @@ admin_email: admin@localhost
 # What to do with given client name. Valid values: issue, revoke
 keys_action: issue
 iptables_configure: True
+# Default clients list is empty
+clients: []
