--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -8,10 +8,7 @@ ca /etc/openvpn/server_keys/ca.crt
 cert /etc/openvpn/server_keys/{{ server_name }}.crt
 key /etc/openvpn/server_keys/{{ server_name }}.key
 dh /etc/openvpn/server_keys/dh2048.pem
-; We do not enable revocation list by default cause this file is not created
-; by default by easy-rsa. It creates only after first revocation, so mech
-; should be adapted for this
-;crl-verify /etc/openvpn/server_keys/crl.pem
+crl-verify /etc/openvpn/server_keys/crl.pem
 
 {% if use_tls_auth %}
 tls-auth /etc/openvpn/server_keys/ta.key 0
