Update minimal Ansible version, fix errors
Set minimal Ansible version to 2.4, fix various errors related to
playbook tasks.

--- a/tasks/initialize_revokation_list.yml
+++ b/tasks/initialize_revokation_list.yml
@@ -8,5 +8,5 @@
   include_tasks: setup_client_keys.yml
 
 - name: VPN | Initialize revokation list | Revoke initial user
-  include_tasks: revoke_client_keys.ymL
+  include_tasks: revoke_client_keys.yml
 
