--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,21 @@
 ---
+# Filename for target server keypair file. It can be useful in case
+# you already had some OpenVPN PKI and now just want to migrate to the new
+# version, so if you had OpenVPN server keys named after 'some.name.[key,crt]'
+# and will set server_name var to 'some.name', your keys won't be regenerated
+# and you will continue to use old ones.
 server_name: localhost
+
+# Hostname which clients should connect to. In case you will
+# use it, exactly that name will be shown in client ovpn file as server to
+# connect to, otherwise 'server_name' var will be used. Optional.
+#real_server_name: 100.100.100.100
+
+# List of additional pushes which will be advertised for
+# clients.
+additional_pushes:
+ - "redirect-gateway def1"
+# Server address and type
 server_port: 1494
 protocol: udp
 # Valid values: tun, tap
@@ -17,11 +33,12 @@ dns_pushes:
 ping: 5
 ping_restart: 30
 syslog_name: openvpn
-additional_pushes:
-  - "redirect-gateway def1"
 admin_email: admin@localhost
 # What to do with given client name. Valid values: issue, revoke
 keys_action: issue
 iptables_configure: True
+# List of clients to issue certificate for. In case of first-time
+# Installation it will be ignored due to way revokation list created. Next
+# times it will be used as a name of client to create certificate for.
 # Default clients list is empty
 clients: []
