Add certificate prefix parameter
For cases when you run several VPN servers with the same client names,
add a prefix which can be different for each server to be able to
download VPN configs for same client name simultaneously.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,3 +42,5 @@ iptables_configure: True
 # times it will be used as a name of client to create certificate for.
 # Default clients list is empty
 clients: []
+# Prefix for fetched to local host certificate name. Empty by default
+cert_prefix: ""
