--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -39,3 +39,6 @@ client-to-client
 {% for push in additional_pushes %}
 push "{{ push }}"
 {% endfor %}
+{% for config in additional_configs %}
+{{ config }}
+{% endfor %}
