--- a/tests/test.yml
+++ b/tests/test.yml
@@ -10,18 +10,12 @@
 # be ran next times just to issue additional certificates):
 # ansible-playbook -i <inventory_file> -b vpn.yml -e 'server_name=domain.name'
 #
-# To revoke client certificate:
-# ansible-playbook -i <inventory_file> -b vpn.yml -e 'server_name=domain.name
-#   keys_action=revoke'
+# To revoke client certificate just delete user from clients list
 #
 - name: Install VPN server and create some client certs for it
   hosts: vpn-server
   remote_user: root
   sudo: yes
-  vars_prompt:
-    - name: "clients"
-      prompt: "Please enter login name"
-      private: no
   roles:
     - vpn
 
