--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -14,8 +14,8 @@ crl-verify /etc/openvpn/server_keys/crl.pem
 tls-auth /etc/openvpn/server_keys/ta.key 0
 {% endif %}
 
-auth SHA512
-cipher AES-256-CBC
+auth {{ auth }}
+cipher {{ cipher }}
 {% if address_to_bind is defined %}
 local {{ address_to_bind }}
 {% endif %}
