--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -32,10 +32,18 @@ user nobody
 group nogroup
 status /var/log/openvpn-status.log
 log /var/log/openvpn.log
+; Verbosity 1 to 4 is recommended
 verb 3
+; Suppress more than 10 similar log lines
 mute 10
+{% if duplicate_cn %}
+; Allow clients with duplicate CN names connect simultaneously
 duplicate-cn
+{% endif %}
+{% if client_to_client %}
+; Allow connected clients reach each other
 client-to-client
+{% endif %}
 {% for push in additional_pushes %}
 push "{{ push }}"
 {% endfor %}
