--- a/tasks/setup_openvpn_server.yml
+++ b/tasks/setup_openvpn_server.yml
@@ -30,3 +30,11 @@
     - { src: 'openvpn.conf', dest: '/etc/openvpn/openvpn.conf' }
   notify:
     - Restart OpenVPN
+
+- name: VPN | Configuration | Ensure client config dif
+  file:
+    state: directory
+    path: "{{ client_config_dir_path}}"
+    mode: 0755
+    owner: root
+    group: root
