--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -9,6 +9,7 @@ cert /etc/openvpn/server_keys/{{ server_name }}.crt
 key /etc/openvpn/server_keys/{{ server_name }}.key
 dh /etc/openvpn/server_keys/dh2048.pem
 crl-verify /etc/openvpn/server_keys/crl.pem
+client-config-dir {{ client_config_dir_path }}
 
 {% if use_tls_auth %}
 tls-auth /etc/openvpn/server_keys/ta.key 0
@@ -19,15 +20,22 @@ cipher {{ cipher }}
 {% if address_to_bind is defined %}
 local {{ address_to_bind }}
 {% endif %}
-server {{ vpn_network }} {{ vpn_netmask }}
+server {{ vpn_network }} {{ vpn_netmask }} {% if nopool %}nopool{% endif %}
+{% if ifconfig_pool %}
+{{ ifconfig_pool }}
+{% endif %}
 
 {% for address in dns_pushes %}
 push "dhcp-option DNS {{ address }}"
 {% endfor %}
 keepalive {{ ping }} {{ ping_restart }}
 comp-lzo
+{% if persist_key %}
 persist-key
+{% endif %}
+{% if persist_tun %}
 persist-tun
+{% endif %}
 user nobody
 group nogroup
 status /var/log/openvpn-status.log
