--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -8,7 +8,9 @@ ca /etc/openvpn/server_keys/ca.crt
 cert /etc/openvpn/server_keys/{{ server_name }}.crt
 key /etc/openvpn/server_keys/{{ server_name }}.key
 dh /etc/openvpn/server_keys/dh2048.pem
+{% if crl_file.stat.exists %}
 crl-verify /etc/openvpn/server_keys/crl.pem
+{% endif %}
 client-config-dir {{ client_config_dir_path }}
 
 {% if use_tls_auth %}
@@ -20,9 +22,11 @@ cipher {{ cipher }}
 {% if address_to_bind is defined %}
 local {{ address_to_bind }}
 {% endif %}
+topology {{ topology }}
 server {{ vpn_network }} {{ vpn_netmask }} {% if nopool %}nopool{% endif %}
+
 {% if ifconfig_pool %}
-{{ ifconfig_pool }}
+ifconfig-pool {{ ifconfig_pool }}
 {% endif %}
 
 {% for address in dns_pushes %}
