--- a/tasks/_prechecks.yml
+++ b/tasks/_prechecks.yml
@@ -14,3 +14,8 @@
     msg: "One or more user names are missed"
   failed_when: item.name is not defined
   with_items: "{{ clients }}"
+
+- name: VPN | Checks | OS type
+  fail:
+    msg: "Sorry, your OS type is not supported"
+  when: ansible_distribution != "Ubuntu"
