--- a/tasks/create_openvpn_user.yml
+++ b/tasks/create_openvpn_user.yml
@@ -94,6 +94,7 @@
     body: "{{ mail.body }}"
     attach: ["/etc/openvpn/client_keys/{{ user.name }}/{{ user.name }}.ovpn"]
   when: user.email is defined and mail.host is defined and user_cert.changed
+  failed_when: False
   tags:
     - create_users
     - openvpn_users
