--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: VPN | Installation | Prepare OpenVPN repo and install server
   import_tasks: setup_openvpn_server.yml
-  tags: ['openvpn_packages']
+  tags: ['openvpn_config']
 
 - name: VPN | Installation | Prepare easy-rsa scripts
   import_tasks: easy_rsa_prepare.yml
@@ -34,3 +34,19 @@
   tags:
     - revoke_users
     - openvpn_users
+
+- name: VPN | Configuration | Check if CRL file exists
+  stat:
+    path: /etc/openvpn/easy-rsa/keys/crl.pem
+  register: crl_file
+  tags: ['openvpn_config']
+
+- name: VPN | Configuration | Ensure main config file
+  template:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  with_items:
+    - { src: 'openvpn.conf', dest: '/etc/openvpn/openvpn.conf' }
+  notify:
+    - Restart OpenVPN
+  tags: ['openvpn_config']
