--- a/tasks/remove_openvpn_users.yml
+++ b/tasks/remove_openvpn_users.yml
@@ -56,6 +56,7 @@
     path: /etc/openvpn/easy-rsa/keys/crl.pem
     state: file
     mode: 0644
+  when: crl_file.stat.exists
 
 - name: VPN | CCD | Remove revoked users ccd files
   file:
