--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,11 @@
   import_tasks: setup_server_keys.yml
   tags: ['server_keys']
 
+- name: VPN | Users | Get users list
+  import_tasks: get_ldap_users.yml
+  when: use_ldap == True
+  tags: ['ldap']
+
 - name: VPN | Users | Ensure given users on server
   include_tasks: create_openvpn_user.yml
   loop: "{{ clients }}"
