--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -33,7 +33,9 @@ ifconfig-pool {{ ifconfig_pool }}
 push "dhcp-option DNS {{ address }}"
 {% endfor %}
 keepalive {{ ping }} {{ ping_restart }}
+{% if comp_lzo %}
 comp-lzo
+{% endif %}
 {% if persist_key %}
 persist-key
 {% endif %}
