--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -44,12 +44,15 @@ persist-tun
 {% endif %}
 user nobody
 group nogroup
-status /var/log/openvpn-status.log
-log /var/log/openvpn.log
+{% if enable_logging %}
+status /var/log/openvpn/openvpn-status.log
+log-append /var/log/openvpn/openvpn.log
+{% endif %}
 ; Verbosity 1 to 4 is recommended
-verb 3
+verb 2
 ; Suppress more than 10 similar log lines
-mute 10
+mute 3
+mute-replay-warnings
 {% if duplicate_cn %}
 ; Allow clients with duplicate CN names connect simultaneously
 duplicate-cn
